--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -9,7 +9,40 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "import joblib\n",
+    "\n",
+    "# Load processed dataset\n",
+    "df = pd.read_csv(\"../data/processed_churn_data.csv\")\n",
+    "\n",
+    "# Define features and target\n",
+    "X = df.drop(columns=['Churn'])\n",
+    "y = df['Churn']\n",
+    "\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Train RandomForest model\n",
+    "model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Model Accuracy: {accuracy:.2f}\")\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "# Save trained model\n",
+    "joblib.dump(model, \"../models/churn_model.pkl\")\n",
+    "print(\"Model saved successfully!\")"
+   ]
   }
  ],
  "metadata": {
